fix scrollbar

--- a/src/component/Listing.css
+++ b/src/component/Listing.css
@@ -4,7 +4,7 @@
   height: 124px;
   margin-bottom: 24px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 8px;
   padding: 18px;
   border-radius: 25px;
 }
