--- a/src/component/ListingCards.css
+++ b/src/component/ListingCards.css
@@ -2,9 +2,10 @@
   background-color: #d9f0df;
   width: 590px;
   height: 480px;
-  border-radius: 30px;
+  border-radius: 26px;
   display: flex;
   flex-direction: column;
+  padding-right: 18px;
 }
 
 .listings {
